; ModuleID = '/home/carl/AnghaBench/systemd/src/fuzz/extr_fuzz-dhcp6-client.c_LLVMFuzzerTestOneInput.c'
source_filename = "/home/carl/AnghaBench/systemd/src/fuzz/extr_fuzz-dhcp6-client.c_LLVMFuzzerTestOneInput.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @LLVMFuzzerTestOneInput(i32* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  store i32* %0, i32** %4, align 8
  store i64 %1, i64* %5, align 8
  %6 = load i64, i64* %5, align 8
  %7 = icmp ugt i64 %6, 65536
  br i1 %7, label %8, label %9

8:                                                ; preds = %2
  store i32 0, i32* %3, align 4
  br label %16

9:                                                ; preds = %2
  %10 = load i32*, i32** %4, align 8
  %11 = load i64, i64* %5, align 8
  %12 = call i32 @fuzz_client(i32* %10, i64 %11, i32 0)
  %13 = load i32*, i32** %4, align 8
  %14 = load i64, i64* %5, align 8
  %15 = call i32 @fuzz_client(i32* %13, i64 %14, i32 1)
  store i32 0, i32* %3, align 4
  br label %16

16:                                               ; preds = %9, %8
  %17 = load i32, i32* %3, align 4
  ret i32 %17
}

declare dso_local i32 @fuzz_client(i32*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
